# sar_optical_fusion

./: README.md  main.py  pred.py  pyproject.toml  test.py  train.py
data/stats/: s1_mean.npy  s1_std.npy  s2_mean.npy  s2_std.npy
logs /events/: events.out.tfevents.1739961483.n3068-007.2585853.0  events.out.tfevents.1739964907.n3068-007.2595427.0  events.out.tfevents.1739965368.n3068-007.2596885.0  events.out.tfevents.1739965630.n3068-007.2598888.0  events.out.tfevents.1739997395.n3073-015.3124052.0  events.out.tfevents.1740006965.n3068-007.2715459.0  events.out.tfevents.1740039255.n3073-007.3042557.0  events.out.tfevents.1740050897.n3068-007.2829460.0  events.out.tfevents.1740064581.n3072-012.22832.0  events.out.tfevents.1740074922.n3068-007.2890618.0  events.out.tfevents.1740213196.n3068-007.3241523.0  events.out.tfevents.1740257823.n3068-007.3353142.0  events.out.tfevents.1740563919.n3068-007.229567.0  events.out.tfevents.1740565534.n3068-007.232910.0  events.out.tfevents.1740566096.n3068-007.234223.0  events.out.tfevents.1740573479.n3068-007.247894.0  events.out.tfevents.1740574234.n3068-007.250543.0  events.out.tfevents.1740584321.n3068-007.271508.0  events.out.tfevents.1740590728.n3068-007.282983.0  events.out.tfevents.1741219659.n3068-007.1931054.0  events.out.tfevents.1741255694.n3068-007.2018314.0  events.out.tfevents.1741437850.n3068-007.2486115.0  (+36 more)
notebooks/: S1+S2_fusion_of_masked_water_retrievals.ipynb  calc_entropy.ipynb  uncert_quan.ipynb
slurm_script/: seg_likelihood.sh
src/: eval.py  train.py  train_concrete.py
src/dataset/: dataset.py  utils.py
(+7 files in other folders)
