[project]
name = "sar-optical-fusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pystac>=1.14.3",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
